--- a/index.html
+++ b/index.html
@@ -16,7 +16,66 @@
         <i class="bx bx-shopping-bag" id="cart-icon"></i>
         </div>
     </header>
+    <section class="shop container">
 
+      <h2 class="section-title">Shop Products</h2>
+
+       <div class="shop-content">
+
+
+        <div class="product-box">
+         <img src="https://image-us.samsung.com/SamsungUS/home/mobile/phones/pdp/galaxy-z/galaxy-z-flip4/SDSAC-4730-Zflip4-Blue-01-1600x1200.jpg?$product-details-jpg$" alt="" class="product img">
+           <h2 class="product-title">Galaxy Z Flip4 128GB</h2>
+            <span class="price">$999.99</span>
+              <i class="bx bx-shopping-bag add-cart"></i>
+         </div>
+    <div class="product-box">
+        <img src="product\galaxy-z-fold4_highlights_kv.jpg" alt="" class="product img">
+        <h2 class="product-title">Galaxy Z Fold4 128GB</h2>
+        <span class="price">$900</span>
+        <i class="bx bx-shopping-bag add-cart"></i>
+            </div>
+            <div class="product-box">
+                <img src="product\1.webp" alt="" class="product img">
+                <h2 class="product-title">Galaxy S23 Ultra, 512GB</h2>
+                <span class="price">$1379.99</span>
+                <i class="bx bx-shopping-bag add-cart"></i>
+                    </div>
+                    <div class="product-box">
+                        <img src="product\webp2.webp" alt="" class="product img">
+                        <h2 class="product-title">Galaxy Buds Live, Mystic Black</h2>
+                        <span class="price">$109.99</span>
+                        <i class="bx bx-shopping-bag add-cart"></i>
+                            </div>
+                            <div class="product-box">
+                                <img src="product\web6.webp" alt="" class="product img">
+                                <h2 class="product-title">Galaxy Watch5</h2>
+                                <span class="price">$229.99</span>
+                                <i class="bx bx-shopping-bag add-cart"></i>
+                                    </div>
+                                    <div class="product-box">
+                                        <img src="product\webp5.webp" alt="" class="product img">
+                                        <h2 class="product-title">Galaxy Watch Charging Dock</h2>
+                                        <span class="price">$29.99</span>
+                                        <i class="bx bx-shopping-bag add-cart"></i>
+                                            </div>
+                                            <div class="product-box">
+                                                <img src="product\webp3.webp" alt="" class="product img">
+                                                <h2 class="product-title">25W Super Fast Wall Charger, Black</h2>
+                                                <span class="price">$19.99</span>
+                                                <i class="bx bx-shopping-bag add-cart"></i>
+                                                    </div>
+                                                    <div class="product-box">
+                                                        <img src="product\webp4.webp" alt="" class="product img">
+                                                        <h2 class="product-title">15W Wireless Charger Duo with Travel Adapter, Dark Gray</h2>
+                                                        <span class="price">$89.99</span>
+                                                        <i class="bx bx-shopping-bag add-cart"></i>
+                                                            </div>
+</div>
+
+    </section>
+
+    
 
 
 
