--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
         <div class = "nav container"> 
          <a href="#" class = "logo">E-Shop</a>
         <i class="bx bx-shopping-bag" id="cart-icon"></i>
+        <div class="cart">
+            <h2 class="cart-title">Your Cart</h2>
+            <div class="cart-content">
+
+                <div class="cart-box">
+                    <img src="product\galaxy-z-fold4_highlights_kv.jpg" alt="" class="cart-img">
+                    <div class="detail-box">
+                        <div class="cart-product-title">Galaxy Z Fold4 128GB</div>
+                        <div class="cart-price">$999.99</div>
+                        <input type="number"value="1" class="cart-quantity" >
+
+                    </div>
+                    <i class="bx bxs-trash-alt cart-remove"></i>
+                </div>
+            </div>
+            <div class="Total">
+                <div class="Total-title">Total</div>
+                <div class="Total-price">$0</div>
+            </div>
+            <button type="button" class="btn-buy">Order Now</button>
+            <i class="bx bx-x" id="close-cart"></i>
+        </div>
         </div>
     </header>
     <section class="shop container">
