--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <img src="product\galaxy-z-fold4_highlights_kv.jpg" alt="" class="cart-img">
                     <div class="detail-box">
                         <div class="cart-product-title">Galaxy Z Fold4 128GB</div>
-                        <div class="cart-price">$999.99</div>
+                        <div class="cart-price">$900</div>
                         <input type="number"value="1" class="cart-quantity" >
 
                     </div>
@@ -31,7 +31,7 @@
             </div>
             <div class="Total">
                 <div class="Total-title">Total</div>
-                <div class="Total-price">$0</div>
+                <div class="Total-price">0</div>
             </div>
             <button type="button" class="btn-buy">Order Now</button>
             <i class="bx bx-x" id="close-cart"></i>
