--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class = "nav container"> 
-         <a href="#" class = "logo">E-Shop</a>
+         <a href="http://127.0.0.1:5500/project/index.html" class = "logo">E-Shop</a>
         <i class="bx bx-shopping-bag" id="cart-icon"></i>
         <div class="cart">
             <h2 class="cart-title">Your Cart</h2>
@@ -114,7 +114,20 @@
 
 
 
-
+<footer>
+    <div >
+        <a  href="Sign in .html">signin</a>
+    </div>
+    <div>
+        <a href="signup.html">signup</a>
+    </div>
+    <div>
+    <form>
+        <form class="nosubmit">
+            <input class="nosubmit" type="search" placeholder="Search...">
+          </form>
+          </div>
+</footer>
 
 
 
